[package]
name = "tiny-earley"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[benches]
path = "bench_parser.rs"

[dependencies]
rayon = { version = "1.10", optional = true }
c_lexer_logos = "0.1"

[dev-dependencies]

[profile.bench]
opt-level = 3               # Use slightly better optimizations.

[features]
default = ["debug"]
debug = []
